<resources>
    <string name="app_name">Estore</string>
    <string name="right_address">The Right Address\nFor Shopping\nAny Day</string>
    <string name="tvQuality">It is now very easy to reach the \nbest quality among the\nproducts on the internet!</string>
    <string name="register_app">Register</string>
    <string name="store_name">AlphaMart</string>
    <string name="login_app">Login</string>
    <string name="let_s_login">Let\'s login</string>
    <string name="register_prompt">Don\'t have an account? Register now</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_with_facebook">login with facebook</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="start_app">Start</string>
    <string name="login_prompt">Already have an account? Login</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="register_page_title">Let\'s Register</string>
    <string name="loading_request">Loading...</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="reset_instruction">Enter your registered email to reset to password</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Reset</string>
    <string name="home_title">Home</string>
    <string name="search_title">Search</string>
    <string name="cart_title">Cart</string>
    <string name="profile_title">Profile</string>
</resources>