<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/blurry_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginLeftGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginRightGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

        <TextView
            android:id="@+id/tvStoreName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:drawablePadding="6dp"
            android:text="@string/store_name"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_kleine_shape"
            app:layout_constraintStart_toStartOf="@+id/loginLeftGuide"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLogin"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/let_s_login"
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="@+id/loginLeftGuide"
            app:layout_constraintTop_toBottomOf="@id/tvStoreName" />

        <TextView
            android:id="@+id/tvRegisterPrompt"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/register_prompt"
            app:layout_constraintStart_toStartOf="@+id/loginLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

        <EditText
            android:id="@+id/etLoginEmail"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/etHeight"
            android:layout_marginTop="48dp"
            android:autofillHints="emailAddress"
            android:hint="@string/hint_email"
            android:inputType="textWebEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/loginRightGuide"
            app:layout_constraintStart_toStartOf="@id/loginLeftGuide"
            app:layout_constraintTop_toBottomOf="@id/tvRegisterPrompt" />

        <EditText
            android:id="@+id/etLoginPassword"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/etHeight"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/loginRightGuide"
            app:layout_constraintStart_toStartOf="@id/loginLeftGuide"
            app:layout_constraintTop_toBottomOf="@id/etLoginEmail" />

        <TextView
            android:id="@+id/tvForgotPasswordLogin"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/loginLeftGuide"
            app:layout_constraintTop_toBottomOf="@id/etLoginPassword" />

        <Button
            android:id="@+id/buttonLoginLogin"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/blue_background"
            android:text="@string/login_app"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/loginRightGuide"
            app:layout_constraintStart_toStartOf="@+id/loginLeftGuide"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordLogin" />

        <ImageView
            android:id="@+id/facebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/login_with_facebook"
            android:src="@drawable/facebook_login"
            app:layout_constraintStart_toStartOf="@id/loginLeftGuide"
            app:layout_constraintTop_toBottomOf="@id/buttonLoginLogin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            app:layout_constraintBottom_toBottomOf="@id/facebookLogin"
            app:layout_constraintEnd_toEndOf="@id/facebookLogin"
            app:layout_constraintStart_toStartOf="@id/facebookLogin"
            app:layout_constraintTop_toTopOf="@id/facebookLogin" />

        <ImageView
            android:id="@+id/googleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/login_with_facebook"
            android:src="@drawable/google_login"
           app:layout_constraintEnd_toEndOf="@id/loginRightGuide"
            app:layout_constraintTop_toBottomOf="@id/buttonLoginLogin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            app:layout_constraintBottom_toBottomOf="@id/googleLogin"
            app:layout_constraintEnd_toEndOf="@id/googleLogin"
            app:layout_constraintStart_toStartOf="@id/googleLogin"
            app:layout_constraintTop_toTopOf="@id/googleLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>