<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/blurry_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvStoreName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:drawablePadding="6dp"
            android:text="@string/store_name"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_kleine_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRightAddress"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:gravity="center"
            android:text="@string/right_address"
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStoreName" />

        <TextView
            android:id="@+id/tvQuality"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/tvQuality"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/tvRightAddress"
            app:layout_constraintStart_toStartOf="@+id/tvRightAddress"
            app:layout_constraintTop_toBottomOf="@+id/tvRightAddress" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_background"
            android:text="@string/register_app"
            app:backgroundTint="@null"
            style="@style/blueButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvQuality"
            app:layout_constraintStart_toStartOf="@+id/tvQuality"
            app:layout_constraintTop_toBottomOf="@+id/tvQuality" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_app"
            app:backgroundTint="@null"
            style="@style/whiteButtonStyle"
           android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/tvQuality"
            app:layout_constraintStart_toStartOf="@+id/tvQuality"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>