<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineLeftTexture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineEllipseLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineEllipseRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineEllipseTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineEllipseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:src="@drawable/texture_left"
        app:layout_constraintBottom_toBottomOf="@id/guideLineLeftTexture"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ellipse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_ellipse"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@id/guideLineEllipseBottom"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideLineEllipseRight"
        app:layout_constraintStart_toStartOf="@id/guideLineEllipseLeft"
        app:layout_constraintTop_toTopOf="@id/guideLineEllipseTop" />

    <TextView
        android:id="@+id/tvRightAddress"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvRightAddressMargin"
        android:gravity="center"
        android:text="@string/right_address"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@id/ellipse"
        app:layout_constraintEnd_toEndOf="@+id/ellipse"
        app:layout_constraintStart_toStartOf="@id/ellipse"
        app:layout_constraintTop_toTopOf="@id/guideLineLeftTexture" />

    <TextView
        android:id="@+id/tvQuality"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/tvQuality"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tvRightAddress"
        app:layout_constraintStart_toStartOf="@+id/tvRightAddress"
        app:layout_constraintTop_toBottomOf="@+id/tvRightAddress" />

    <ImageView
        android:contentDescription="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/texture_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideLineLeftTexture" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_background"
        android:text="@string/start_app"
        app:backgroundTint="@null"
        style="@style/blueButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvQuality"
        app:layout_constraintStart_toStartOf="@+id/tvQuality"
        app:layout_constraintTop_toBottomOf="@+id/tvQuality" />

</androidx.constraintlayout.widget.ConstraintLayout>